--- a/lib/postoffice_web/templates/layout/app.html.eex
+++ b/lib/postoffice_web/templates/layout/app.html.eex
@@ -57,7 +57,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="<%= Routes.topic_path(@conn, :index) %>" class="nav-link">
               <i class="nav-icon fa fa-bullhorn"></i>
               <p>
                 Topics
