--- a/lib/postoffice_web/templates/publisher/index.html.eex
+++ b/lib/postoffice_web/templates/publisher/index.html.eex
@@ -8,7 +8,7 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">Topic</th>
-          <th scope="col">Endpoint</th>
+          <th scope="col">Target</th>
           <th scope="col">Active</th>
           <th scope="col">Type</th>
         </tr>
@@ -18,7 +18,7 @@
         <tr>
           <th scope="row"><%= link "#{publisher.id}", to: Routes.publisher_path(@conn, :edit, publisher.id) %></th>
           <td><%= publisher.topic.name %></td>
-          <td><%= publisher.endpoint %></td>
+          <td><%= publisher.target %></td>
           <td><%= publisher.active %></td>
           <td><%= publisher.type %></td>
         </tr>
