--- a/lib/postoffice_web/templates/publisher/new.html.eex
+++ b/lib/postoffice_web/templates/publisher/new.html.eex
@@ -8,8 +8,8 @@
     </div>
 
     <div class="form-group">
-      <%= label f, :endpoint, class: "control-label" %>
-      <%= textarea f, :endpoint, class: "form-control", rows: 5 %>
+      <%= label f, :target, class: "control-label" %>
+      <%= textarea f, :target, class: "form-control", rows: 5 %>
     </div>
 
     <div class="form-group">
