--- a/lib/postoffice_web/templates/publisher/index.html.eex
+++ b/lib/postoffice_web/templates/publisher/index.html.eex
@@ -1,7 +1,8 @@
+<div class="d-flex justify-content-between">
+    <h2>Publishers</h2>
+    <%= link "Add new", to: Routes.publisher_path(@conn, :new), class: "btn btn-primary mb-2" %>
+</div>
 <div class="row">
-  <div class="col-md-12">
-    <a class="button"><%= link "Añadir", to: Routes.publisher_path(@conn, :new) %></a>
-  </div>
   <div class="col-md-12">
     <table class="table table-sm">
       <thead>
