--- a/lib/postoffice_web/templates/publisher/new.html.eex
+++ b/lib/postoffice_web/templates/publisher/new.html.eex
@@ -1,34 +1,35 @@
+<h2>Add new Publisher</h2>
 <div class="row">
-  <h2>Add new Publisher</h2>
+    <div class="col-md-3">
+    <%= form_for @changeset, Routes.publisher_path(@conn, :create), fn f -> %>
+        <div class="form-group">
+          <label>Topic</label>
+          <%= select f, :topic_id, @topics %>
+        </div>
 
-<%= form_for @changeset, Routes.publisher_path(@conn, :create), fn f -> %>
-    <div class="form-group">
-      <label>Topic</label>
-      <%= select f, :topic_id, @topics %>
-    </div>
+        <div class="form-group">
+          <%= label f, :target, class: "control-label" %>
+          <%= textarea f, :target, class: "form-control", rows: 5 %>
+        </div>
 
-    <div class="form-group">
-      <%= label f, :target, class: "control-label" %>
-      <%= textarea f, :target, class: "form-control", rows: 5 %>
-    </div>
+        <div class="form-group">
+          <label class="control-label">Active</label>
+          <%= checkbox f, :active, value: true %>
+        </div>
 
-    <div class="form-group">
-      <label class="control-label">Active</label>
-      <%= checkbox f, :active, value: true %>
-    </div>
+        <div class="form-group">
+          <label>Type</label>
+          <%= select f, :type, Postoffice.Messaging.Publisher.types %>
+        </div>
 
-    <div class="form-group">
-      <%= label f, :type, class: "control-label"%>
-      <%= select f, :type, Postoffice.Messaging.Publisher.types %>
-    </div>
+        <div class="form-group">
+          <label class="control-label">Start sending messages from now</label>
+          <%= checkbox f, :from_now %>
+        </div>
 
-    <div class="form-group">
-      <label class="control-label">Start sending messages from now</label>
-      <%= checkbox f, :from_now %>
+        <div class="form-group">
+          <%= submit "Submit", class: "btn btn-primary" %>
+        </div>
+    <% end %>
     </div>
-
-    <div class="form-group">
-      <%= submit "Submit", class: "btn btn-primary" %>
-    </div>
-<% end %>
 </div>
