--- a/lib/postoffice_web/templates/publisher/edit.html.eex
+++ b/lib/postoffice_web/templates/publisher/edit.html.eex
@@ -1,14 +1,12 @@
-<h2>Edit Publisher</h2>
-
 <%= form_for @changeset, Routes.publisher_path(@conn, :update, @publisher), fn f -> %>
     <div class="form-group">
       <label>Topic</label>
-      <%= select f, :topic_id, @topics, disabled: true %>
+      <%= select f, :topic_id, @topics, disabled: true, class: "form-control selectpicker" %>
     </div>
 
     <div class="form-group">
       <%= label f, :target, class: "control-label" %>
-      <%= textarea f, :target, class: "form-control", rows: 5 %>
+      <%= textarea f, :target, class: "form-control", rows: 1 %>
     </div>
 
     <div class="form-group">
@@ -18,7 +16,7 @@
 
     <div class="form-group">
       <%= label f, :type, class: "control-label" %>
-      <%= select f, :type, Postoffice.Messaging.Publisher.types, rows: 5 %>
+      <%= select f, :type, Postoffice.Messaging.Publisher.types, disabled: true, class: "form-control selectpicker" %>
     </div>
 
     <div class="form-group">
