--- a/lib/postoffice_web/templates/publisher/index.html.eex
+++ b/lib/postoffice_web/templates/publisher/index.html.eex
@@ -1,28 +1,31 @@
-<div class="d-flex justify-content-between">
-    <h2>Publishers</h2>
-    <%= link "Add new", to: Routes.publisher_path(@conn, :new), class: "btn btn-primary mb-2" %>
-</div>
+<%= link "Add new", to: Routes.publisher_path(@conn, :new), class: "btn btn-primary btn-round" %>
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-sm">
+    <table class="table">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Topic</th>
-          <th scope="col">Target</th>
-          <th scope="col">Active</th>
-          <th scope="col">Type</th>
+          <th>#</th>
+          <th>Topic</th>
+          <th>Target</th>
+          <th>Active</th>
+          <th>Type</th>
         </tr>
       </thead>
       <tbody>
         <%= for publisher <- @publishers do %>
         <tr>
-          <th scope="row"><%= link "#{publisher.id}", to: Routes.publisher_path(@conn, :edit, publisher.id) %></th>
+          <th><%= link "#{publisher.id}", to: Routes.publisher_path(@conn, :edit, publisher.id) %></th>
           <td><%= publisher.topic.name %></td>
           <td><%= publisher.target %></td>
-          <td><%= publisher.active %></td>
+          <%= if publisher.active do %>
+            <td><i class="material-icons info">toggle_on</i></td>
+          <% else %>
+            <td><i class="material-icons">toggle_off</i></td>
+          <% end %>
           <td><%= publisher.type %></td>
         </tr>
         <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
