--- a/lib/postoffice_web/templates/publisher/new.html.eex
+++ b/lib/postoffice_web/templates/publisher/new.html.eex
@@ -1,15 +1,14 @@
-<h2>Add new Publisher</h2>
 <div class="row">
     <div class="col-md-3">
     <%= form_for @changeset, Routes.publisher_path(@conn, :create), fn f -> %>
         <div class="form-group">
           <label>Topic</label>
-          <%= select f, :topic_id, @topics %>
+          <%= select f, :topic_id, @topics, class: "form-control selectpicker" %>
         </div>
 
         <div class="form-group">
           <%= label f, :target, class: "control-label" %>
-          <%= textarea f, :target, class: "form-control", rows: 5 %>
+          <%= textarea f, :target, class: "form-control", rows: 1 %>
         </div>
 
         <div class="form-group">
@@ -18,8 +17,8 @@
         </div>
 
         <div class="form-group">
-          <label>Type</label>
-          <%= select f, :type, Postoffice.Messaging.Publisher.types %>
+          <label for="type">Type</label>
+          <%= select f, :type, Postoffice.Messaging.Publisher.types, class: "form-control selectpicker" %>
         </div>
 
         <div class="form-group">
