--- a/lib/postoffice_web/templates/topic/index.html.eex
+++ b/lib/postoffice_web/templates/topic/index.html.eex
@@ -1,16 +1,12 @@
-<div class="d-flex justify-content-between">
-    <h2>Topics</h2>
-    <%= link "Add new", to: Routes.topic_path(@conn, :new), class: "btn btn-primary mb-2" %>
-</div>
-
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-sm">
+    <table class="table">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">Origin Host</th>
+          <th>#</th>
+          <th>Name</th>
+          <th>Origin Host</th>
+          <th>Recovery enabled</th>
         </tr>
       </thead>
       <tbody>
@@ -19,7 +15,15 @@
           <td><%= topic.id %></td>
           <td><%= topic.name %></td>
           <td><%= topic.origin_host %></td>
+          <%= if topic.recovery_enabled do %>
+            <td><i class="material-icons">toggle_on</i></td>
+          <% else %>
+            <td><i class="material-icons">toggle_off</i></td>
+          <% end %>
+
         </tr>
         <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
