--- a/lib/postoffice_web/templates/publisher/index.html.eex
+++ b/lib/postoffice_web/templates/publisher/index.html.eex
@@ -1,26 +1,26 @@
 <%= link "Add new", to: Routes.publisher_path(@conn, :new), class: "btn btn-primary btn-round" %>
 <div class="row">
   <div class="col-md-12">
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <tr>
-          <th>#</th>
-          <th>Topic</th>
-          <th>Target</th>
-          <th>Active</th>
-          <th>Type</th>
+          <th scope="col">#</th>
+          <th scope="col">Topic</th>
+          <th scope="col">Target</th>
+          <th scope="col">Active</th>
+          <th scope="col">Type</th>
         </tr>
       </thead>
       <tbody>
         <%= for publisher <- @publishers do %>
-        <tr>
-          <th><%= link "#{publisher.id}", to: Routes.publisher_path(@conn, :edit, publisher.id) %></th>
+        <tr scope="row">
+          <td><%= link "#{publisher.id}", to: Routes.publisher_path(@conn, :edit, publisher.id) %></th>
           <td><%= publisher.topic.name %></td>
           <td><%= publisher.target %></td>
           <%= if publisher.active do %>
-            <td><i class="material-icons info">toggle_on</i></td>
+            <td><i class="material-icons" style="color:green">toggle_on</i></td>
           <% else %>
-            <td><i class="material-icons">toggle_off</i></td>
+            <td><i class="material-icons" style="color:#cc0000">toggle_off</i></td>
           <% end %>
           <td><%= publisher.type %></td>
         </tr>
