--- a/lib/postoffice_web/templates/publisher/new.html.eex
+++ b/lib/postoffice_web/templates/publisher/new.html.eex
@@ -1,9 +1,21 @@
-<div class="row">
-    <div class="col-md-3">
+<div class="form-row">
+    <div class="col-md-6">
     <%= form_for @changeset, Routes.publisher_path(@conn, :create), fn f -> %>
         <div class="form-group">
           <label>Topic</label>
           <%= select f, :topic_id, @topics, class: "form-control selectpicker" %>
+        </div>
+
+        <div class="form-group">
+          <div class="form-check">
+              <label class="form-check-label">
+                  Active
+                  <%= checkbox f, :active, class: "form-check-input" %>
+                  <span class="form-check-sign">
+                      <span class="check"></span>
+                  </span>
+              </label>
+          </div>
         </div>
 
         <div class="form-group">
@@ -12,18 +24,8 @@
         </div>
 
         <div class="form-group">
-          <label class="control-label">Active</label>
-          <%= checkbox f, :active, value: true %>
-        </div>
-
-        <div class="form-group">
           <label for="type">Type</label>
           <%= select f, :type, Postoffice.Messaging.Publisher.types, class: "form-control selectpicker" %>
-        </div>
-
-        <div class="form-group">
-          <label class="control-label">Start sending messages from now</label>
-          <%= checkbox f, :from_now %>
         </div>
 
         <div class="form-group">
