--- a/lib/postoffice_web/templates/layout/app.html.eex
+++ b/lib/postoffice_web/templates/layout/app.html.eex
@@ -7,6 +7,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+  <%= csrf_meta_tag() %>
+  <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
 </head>
 
 <body>
@@ -71,7 +73,7 @@
       <!-- End Navbar -->
       <div class="content">
         <div class="container-fluid">
-          <%= render @view_module, @view_template, assigns %>
+              <%= @inner_content %>
         </div>
       </div>
       <footer class="footer">
@@ -84,6 +86,5 @@
       </footer>
     </div>
   </div>
-  <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
 </body>
 </html>
