--- a/lib/postoffice_web/templates/publisher/edit.html.eex
+++ b/lib/postoffice_web/templates/publisher/edit.html.eex
@@ -10,6 +10,16 @@
     </div>
 
     <div class="form-group">
+      <%= label f, :seconds_timeout, class: "control-label" %>
+      <%= textarea f, :seconds_timeout, class: "form-control", rows: 1 %>
+    </div>
+
+    <div class="form-group">
+      <%= label f, :type, class: "control-label" %>
+      <%= select f, :type, Postoffice.Messaging.Publisher.types, disabled: true, class: "form-control selectpicker" %>
+    </div>
+
+    <div class="form-group">
       <div class="form-check">
           <label class="form-check-label">
               Active
@@ -19,11 +29,6 @@
               </span>
           </label>
       </div>
-    </div>
-
-    <div class="form-group">
-      <%= label f, :type, class: "control-label" %>
-      <%= select f, :type, Postoffice.Messaging.Publisher.types, disabled: true, class: "form-control selectpicker" %>
     </div>
 
     <div class="form-group">
