--- a/lib/postoffice_web/templates/layout/app.html.eex
+++ b/lib/postoffice_web/templates/layout/app.html.eex
@@ -59,7 +59,7 @@
             <%= form_for @conn, Routes.message_path(@conn, :index), [method: :get, class: "navbar-form"],fn _f -> %>
               <span class="bmd-form-group">
                 <div class="input-group no-border">
-                  <input type="text" id="uuid" name="uuid" value="" class="form-control" placeholder="Search message uuid">
+                  <input type="text" id="id" name="id" value="" class="form-control" placeholder="Search message by id">
                   <button type="submit" class="btn btn-white btn-round btn-just-icon">
                     <i class="material-icons">search</i>
                     <div class="ripple-container"></div>
