--- a/lib/postoffice_web/templates/message/show.html.eex
+++ b/lib/postoffice_web/templates/message/show.html.eex
@@ -1,4 +1,4 @@
-<h4>Message: <%= @message.public_id %></h4>
+<h4>Message: <%= @message.id %></h4>
 <div class="row">
   <div class="col-md-6">
     <table class="table table-bordered">
