--- a/lib/postoffice_web/templates/topic/new.html.eex
+++ b/lib/postoffice_web/templates/topic/new.html.eex
@@ -1,4 +1,3 @@
-<h2>Add new topic</h2>
 <div class="row">
     <div class="col-md-3">
     <%= form_for @changeset, Routes.topic_path(@conn, :create), fn f -> %>
@@ -10,6 +9,18 @@
         <div class="form-group">
           <label>Origin Host</label>
           <%= text_input f, :origin_host, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <div class="form-check">
+            <label class="form-check-label">
+              Recovery enabled
+              <%= checkbox f, :recovery_enabled, class: "form-check-input" %>
+              <span class="form-check-sign">
+                  <span class="check"></span>
+              </span>
+            </label>
+          </div>
         </div>
 
         <div class="form-group">
