--- a/lib/postoffice_web/templates/publisher/edit.html.eex
+++ b/lib/postoffice_web/templates/publisher/edit.html.eex
@@ -15,6 +15,11 @@
     </div>
 
     <div class="form-group">
+      <%= label f, :seconds_retry, class: "control-label" %>
+      <%= textarea f, :seconds_retry, class: "form-control", rows: 1 %>
+    </div>
+
+    <div class="form-group">
       <%= label f, :type, class: "control-label" %>
       <%= select f, :type, Postoffice.Messaging.Publisher.types, disabled: true, class: "form-control selectpicker" %>
     </div>
