--- a/lib/postoffice_web/templates/publisher/new.html.eex
+++ b/lib/postoffice_web/templates/publisher/new.html.eex
@@ -17,6 +17,11 @@
         </div>
 
         <div class="form-group">
+          <%= label f, :seconds_retry, class: "control-label" %>
+          <%= textarea f, :seconds_retry, class: "form-control", rows: 1 %>
+        </div>
+
+        <div class="form-group">
           <label for="type">Type</label>
           <%= select f, :type, Postoffice.Messaging.Publisher.types, class: "form-control selectpicker" %>
         </div>
