--- a/lib/postoffice_web/templates/message/show.html.eex
+++ b/lib/postoffice_web/templates/message/show.html.eex
@@ -21,8 +21,8 @@
 <div class="row">
   <div class="col-md-12">
     <p>
-      <button class="btn btn-outline-primary btn-sm" data-toggle="collapse" href="#collapsePayload" role="button" aria-expanded="false" aria-controls="collapsePayload">View payload</button>
-      <button class="btn btn-outline-primary btn-sm" data-toggle="collapse" href="#collapseAttributes" role="button" aria-expanded="false" aria-controls="collapseAttributes">View attributes</button>
+      <button class="btn btn-outline-primary btn-sm" data-toggle="collapse" data-target="#collapsePayload" role="button" aria-expanded="false" aria-controls="collapsePayload">View payload</button>
+      <button class="btn btn-outline-primary btn-sm" data-toggle="collapse" data-target="#collapseAttributes" role="button" aria-expanded="false" aria-controls="collapseAttributes">View attributes</button>
     </p>
   </div>
   <div class="col-md-12">
