--- a/lib/postoffice_web/templates/message/index.html.eex
+++ b/lib/postoffice_web/templates/message/index.html.eex
@@ -3,13 +3,23 @@
     <table class="table">
       <thead>
         <tr>
-          <th>#</th>
+          <th scope="col">#</th>
+          <th scope="col">Attemps</th>
+          <th scope="col">Max attempts</th>
+          <th scope="col">Last error</th>
+          <th scope="col">Scheduled at</th>
+          <th scope="col">Args</th>
         </tr>
       </thead>
       <tbody>
         <%= for message <- @messages do %>
         <tr>
-          <td><%= message.name %></td>
+          <td><%= message.id %></td>
+          <td><%= message.attempt %></td>
+          <td><%= message.max_attempts %></td>
+          <td><%= message.attempted_at%></td>
+          <td><%= message.scheduled_at%></td>
+          <td><%= Poison.encode!(message.args)%></td>
         </tr>
         <% end %>
       </tbody>
