--- a/lib/postoffice_web/templates/message/index.html.eex
+++ b/lib/postoffice_web/templates/message/index.html.eex
@@ -1,5 +1,22 @@
 <div class="row">
   <div class="col-md-12">
+    <%= if @page_number >= 10 do%>
+      <span>
+        <%= link "Prev Page",
+        class: "btn btn-primary btn-round",
+        to: Routes.message_path(@conn, :index, page: @page_number - 1, page_size: 100) %>
+      </span>
+    <% end %>
+    <%= if @page_number < @total_pages do%>
+      <span>
+        <%= link "Next Page",
+        class: "btn btn-primary btn-round",
+        to: Routes.message_path(@conn, :index, page: @page_number + 1, page_size: 100) %>
+      </span>
+    <% end %>
+    <span>
+      <p class="font-weight-bold">Pages: <%= @page_number %>/<%= @total_pages %></p>
+    </span>
     <table class="table">
       <thead>
         <tr>
