Show failing messages (#127)
* Modify message controller

* Create get_failing_messages method

* Show messages error in template

* Remove a lot of warnings

* Show messages in menu

* Change keys of logging

* Improve menu name

* Create pagination

* Add remaining tests

* Refactor

* Render buttons in templates

Co-authored-by: Emilio Carrión <emcarrio@mercadona.es>

--- a/lib/postoffice_web/templates/layout/app.html.eex
+++ b/lib/postoffice_web/templates/layout/app.html.eex
@@ -39,6 +39,12 @@
               <p>Publishers</p>
             </a>
           </li>
+          <li class="nav-item <%= if @page_name == "Messages" do %>active <% end %>">
+            <a class="nav-link" href="<%= Routes.message_path(@conn, :index) %>">
+              <i class="material-icons">mail_outline</i>
+              <p>Failing Messages</p>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
