--- a/lib/postoffice_web/templates/message/index.html.eex
+++ b/lib/postoffice_web/templates/message/index.html.eex
@@ -34,7 +34,7 @@
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">Attemps</th>
+          <th scope="col">Attempts</th>
           <th scope="col">Max attempts</th>
           <th scope="col">Last error</th>
           <th scope="col">Scheduled at</th>
